--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <!-- Top Bar -->
     <div class='top-bar'>
         <a href="tel:+123456789">Call us at 1 (800) HTML - CSS</a>
+        <!-- ZARAZ USUN --><!-- ZARAZ USUN --><!-- ZARAZ USUN -->
+        <p class="zaraz-usun">asd</p>
+        <!-- ZARAZ USUN --><!-- ZARAZ USUN --><!-- ZARAZ USUN -->
     </div>
 
     <!-- Navigation -->
@@ -39,28 +42,122 @@
     <!-- Images Carousel -->
     <div class="casel-container">
         <div class="casel-slide">
-            <img src="./img/carousel/3.jpg" alt="Office photo" class="last-clone"  >
-            <img src="./img/carousel/1.jpg" alt="Office photo" >
-            <img src="./img/carousel/2.jpg" alt="Office photo" >
-            <img src="./img/carousel/3.jpg" alt="Office photo" >
-            <img src="./img/carousel/1.jpg" alt="Office photo" class="first-clone" >
+            <div class="casel-img-container last-clone">
+                <img src="./img/carousel/3.jpg" alt="Office photo">
+                <div class="casel-text-3">
+                    <h2>BUILT FOR TABLETS</h2>
+                    <h3>THE BEST WEBSITES CAN BE SEEN JUST AS WELL ON ALL DEVICES</h3>
+                    <button class="blue-btn">SEE TABLET</button>
+                </div>
+            </div>
+            <div class="casel-img-container">
+                <img src="./img/carousel/1.jpg" alt="Office photo">
+                <div class="casel-text-1">
+                    <h1>BOOTSTRAP</h1>
+                    <hr>
+                    <h2>COMPLETE WEBSITE DESIGN</h2>
+                    <button class="red-btn">VIEW DEMO</button>
+                    <button class="blue-btn">START NOW</button>
+                </div>
+            </div>
+            <div class="casel-img-container">
+                <img src="./img/carousel/2.jpg" alt="Office photo">
+                <div class="casel-text-2">
+                    <h3>A MOBILE FRIENDLY HTML & CSS WEBSITE DESIGN</h3>
+                    <button class="red-btn">SEE PHONE</button>
+                </div>
+            </div>
+            <div class="casel-img-container">
+                <img src="./img/carousel/3.jpg" alt="Office photo">
+                <div class="casel-text-3">
+                    <h2>BUILT FOR TABLETS</h2>
+                    <h3>THE BEST WEBSITES CAN BE SEEN JUST AS WELL ON ALL DEVICES</h3>
+                    <button class="blue-btn">SEE TABLET</button>
+                </div>
+            </div>
+            <div class="casel-img-container first-clone">
+                <img src="./img/carousel/1.jpg" alt="Office photo">
+                <div class="casel-text-1">
+                    <h1>BOOTSTRAP</h1>
+                    <hr>
+                    <h2>COMPLETE WEBSITE DESIGN</h2>
+                    <button class="red-btn">VIEW DEMO</button>
+                    <button class="blue-btn">START NOW</button>
+                </div>
+            </div>
         </div>
-
         <!-- Previous, Next buttons -->
         <button class="prev-btn"><i class="fas fa-chevron-left"></i></button>
         <button class="next-btn"><i class="fas fa-chevron-right"></i></button>
-        <!-- <p>0</p> -->
     </div>
 
     <!-- Main page heading -->
-
+    <header>
+        <h1>Built with Ease</h1>
+        <hr>
+        <h4>For all of the champions in this world</h4>
+    </header>
 
     <!-- Three Column Section -->
+    <section class="three-column-section-container">
+        <div>
+            <img src="./img/1.jpg" alt="Feature Image">
+            <h4>"Amazing. Incredible."</h4>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur quos omnis, quaerat earum odio.</p>
+            <button>Our Story</button>
+        </div>
+        <div>
+            <img src="./img/2.jpg" alt="Feature Image">
+            <h4>"Amazing. Incredible."</h4>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur quos omnis, quaerat earum odio.</p>
+            <button>Our Story</button>
+        </div>
+        <div>
+            <img src="./img/3.jpg" alt="Feature Image">
+            <h4>"Amazing. Incredible."</h4>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur quos omnis, quaerat earum odio.</p>
+            <button>Our Story</button>
+        </div>
+    </section>
+
+
+    <!-- Fixed Background & Emoji -->
+    <section class="fixed-background-container">
+
+    </section>
+
+
+
+
+
+
+
+    <section class="three-column-section-container">
+        <div>
+            <img src="./img/1.jpg" alt="Feature Image">
+            <h4>"Amazing. Incredible."</h4>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur quos omnis, quaerat earum odio.</p>
+            <button>Our Story</button>
+        </div>
+        <div>
+            <img src="./img/2.jpg" alt="Feature Image">
+            <h4>"Amazing. Incredible."</h4>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur quos omnis, quaerat earum odio.</p>
+            <button>Our Story</button>
+        </div>
+        <div>
+            <img src="./img/3.jpg" alt="Feature Image">
+            <h4>"Amazing. Incredible."</h4>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur quos omnis, quaerat earum odio.</p>
+            <button>Our Story</button>
+        </div>
+    </section>
+
+
+
 
     <script src="https://kit.fontawesome.com/5c9adc9644.js" crossorigin="anonymous"></script>
     <script src="kod.js"></script>
 </body>
 </html>
 
-    
-<!-- <i class="fas fa-grin-alt"></i> -->
